[project]
name = "trackpack"
dynamic = ["version"]
authors = [{name = "offa"}]
description = "Package audio tracks."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "PyYAML == 6.0.3"
]
keywords = ["audio", "packaging", "stems"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/offa/trackpack"

[project.scripts]
trackpack = "trackpack.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 3.3.8",
    "pytest == 8.4.2",
    "ruff == 0.13.3"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "trackpack.version.__version__"}

[tool.setuptools.packages.find]
include = ["trackpack"]

