[project]
name = "trackpack"
dynamic = ["version"]
authors = [{name = "offa"}]
description = "Package audio tracks."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "PyYAML == 6.0.3"
]
keywords = ["audio", "packaging", "stems"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.urls]
"Homepage" = "https://github.com/offa/trackpack"

[project.scripts]
trackpack = "trackpack.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 4.0.4",
    "pyrefly==0.49.0",
    "pytest == 9.0.2",
    "ruff == 0.14.13"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "trackpack.version.__version__"}

[tool.setuptools.packages.find]
include = ["trackpack"]

